--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+#Bootstrap
+django-bootstrap-v5==1.0.11
 # Core for web.
 django==4.2.4
 # For generate data
-faker==19.2.0
+faker==19.3.1
 # [code_style]-[BEGIN]
 # Pre-commit hook.
 pre-commit==3.3.3
